@@ -1,3 +1,6 @@
+2014/07/07 (1.2.27)
+- Added templates for token verification emails.
+
 2014/07/06 (1.2.26)
 - New WebAPI endpoint: /skip (POST).
 - Added listeners cound in status.json.
